--- a/Project-3/style.css
+++ b/Project-3/style.css
@@ -550,6 +550,10 @@ video {
   top: 0px;
 }
 
+.bottom-5 {
+  bottom: 1.25rem;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -559,25 +563,34 @@ video {
   margin-bottom: 3rem;
 }
 
-.my-10 {
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
+.my-3 {
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+}
+
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.ml-3 {
+  margin-left: 0.75rem;
 }
 
 .mt-0 {
   margin-top: 0px;
 }
 
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
+.mt-14 {
+  margin-top: 3.5rem;
+}
+
 .mt-20 {
   margin-top: 5rem;
-}
-
-.ml-4 {
-  margin-left: 1rem;
-}
-
-.ml-3 {
-  margin-left: 0.75rem;
 }
 
 .block {
@@ -588,6 +601,10 @@ video {
   display: flex;
 }
 
+.grid {
+  display: grid;
+}
+
 .hidden {
   display: none;
 }
@@ -595,6 +612,18 @@ video {
 .h-fit {
   height: -moz-fit-content;
   height: fit-content;
+}
+
+.h-1\/2 {
+  height: 50%;
+}
+
+.h-\[25\%\] {
+  height: 25%;
+}
+
+.h-\[930px\] {
+  height: 930px;
 }
 
 .w-1\/2 {
@@ -614,6 +643,46 @@ video {
   width: 100%;
 }
 
+.list-image-\[url\(\'\.\/asss\'\)\] {
+  list-style-image: url('./asss');
+}
+
+.list-image-\[url\(\'\.\/assets\/Icons\'\)\] {
+  list-style-image: url('./assets/Icons');
+}
+
+.list-image-\[url\(\'\.\/assets\/Icon\'\)\] {
+  list-style-image: url('./assets/Icon');
+}
+
+.list-image-\[url\(\'\.\/assets\/icon\'\)\] {
+  list-style-image: url('./assets/icon');
+}
+
+.list-image-\[url\(\'\.\/assets\/Icon\.png\'\)\] {
+  list-style-image: url('./assets/Icon.png');
+}
+
+.grid-rows-2 {
+  grid-template-rows: repeat(2, minmax(0, 1fr));
+}
+
+.grid-rows-\[1fr_0\.5fr\] {
+  grid-template-rows: 1fr 0.5fr;
+}
+
+.grid-rows-\[1fr_0\.2fr\] {
+  grid-template-rows: 1fr 0.2fr;
+}
+
+.grid-rows-\[1fr_0\.1fr\] {
+  grid-template-rows: 1fr 0.1fr;
+}
+
+.grid-rows-\[1fr_1fr\] {
+  grid-template-rows: 1fr 1fr;
+}
+
 .flex-row-reverse {
   flex-direction: row-reverse;
 }
@@ -622,12 +691,12 @@ video {
   flex-direction: column;
 }
 
-.flex-wrap {
-  flex-wrap: wrap;
-}
-
 .items-center {
   align-items: center;
+}
+
+.justify-start {
+  justify-content: flex-start;
 }
 
 .justify-center {
@@ -654,20 +723,32 @@ video {
   gap: 1.25rem;
 }
 
+.self-start {
+  align-self: flex-start;
+}
+
+.self-end {
+  align-self: flex-end;
+}
+
 .self-center {
   align-self: center;
+}
+
+.justify-self-center {
+  justify-self: center;
 }
 
 .rounded-3xl {
   border-radius: 1.5rem;
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
 .rounded-lg {
   border-radius: 0.5rem;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .border {
@@ -706,6 +787,11 @@ video {
   padding-right: 2.5rem;
 }
 
+.px-12 {
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -726,6 +812,11 @@ video {
   padding-right: 1.5rem;
 }
 
+.px-9 {
+  padding-left: 2.25rem;
+  padding-right: 2.25rem;
+}
+
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
@@ -741,54 +832,8 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.px-20 {
-  padding-left: 5rem;
-  padding-right: 5rem;
-}
-
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
-.py-9 {
-  padding-top: 2.25rem;
-  padding-bottom: 2.25rem;
-}
-
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-
-.py-7 {
-  padding-top: 1.75rem;
-  padding-bottom: 1.75rem;
-}
-
-.py-4 {
-  padding-top: 1rem;
+.pb-4 {
   padding-bottom: 1rem;
-}
-
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-
-.px-9 {
-  padding-left: 2.25rem;
-  padding-right: 2.25rem;
-}
-
-.px-11 {
-  padding-left: 2.75rem;
-  padding-right: 2.75rem;
-}
-
-.px-12 {
-  padding-left: 3rem;
-  padding-right: 3rem;
 }
 
 .pl-9 {
@@ -803,29 +848,31 @@ video {
   padding-top: 1.75rem;
 }
 
-.pb-5 {
-  padding-bottom: 1.25rem;
-}
-
-.pb-4 {
-  padding-bottom: 1rem;
-}
-
-.font-\[\'Poppins\'\2c \'serif\'\] {
-  font-family: 'Poppins','serif';
+.text-center {
+  text-align: center;
 }
 
 .font-\[\'Poppins\'\2c \'sans-serif\'\] {
   font-family: 'Poppins','sans-serif';
 }
 
-.font-sans {
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+.font-\[\'Poppins\'\2c \'serif\'\] {
+  font-family: 'Poppins','serif';
 }
 
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }
 
 .text-7xl {
@@ -838,19 +885,14 @@ video {
   line-height: 1.75rem;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-\[350\] {
@@ -865,12 +907,24 @@ video {
   font-weight: 600;
 }
 
-.font-light {
-  font-weight: 300;
+.leading-none {
+  line-height: 1;
 }
 
-.font-medium {
-  font-weight: 500;
+.leading-tight {
+  line-height: 1.25;
+}
+
+.leading-loose {
+  line-height: 2;
+}
+
+.leading-normal {
+  line-height: 1.5;
+}
+
+.leading-relaxed {
+  line-height: 1.625;
 }
 
 .text-\[\#42454A\] {
@@ -911,35 +965,10 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-2xl {
-  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
-  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-inner {
-  --tw-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
-  --tw-shadow-colored: inset 0 2px 4px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-gray-950 {
-  --tw-shadow-color: #030712;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
 .transition-all {
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
-}
-
-.delay-200 {
-  transition-delay: 200ms;
-}
-
-.delay-500 {
-  transition-delay: 500ms;
 }
 
 .duration-200 {
@@ -948,12 +977,6 @@ video {
 
 .ease-in {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
-}
-
-.hover\:scale-125:hover {
-  --tw-scale-x: 1.25;
-  --tw-scale-y: 1.25;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .hover\:scale-110:hover {
@@ -1010,7 +1033,46 @@ video {
   }
 }
 
+@media (max-width: 612px) {
+  .max-\[612px\]\:bottom-8 {
+    bottom: 2rem;
+  }
+}
+
+@media (max-width: 444px) {
+  .max-\[444px\]\:bottom-0 {
+    bottom: 0px;
+  }
+
+  .max-\[444px\]\:bottom-5 {
+    bottom: 1.25rem;
+  }
+
+  .max-\[444px\]\:bottom-8 {
+    bottom: 2rem;
+  }
+
+  .max-\[444px\]\:bottom-10 {
+    bottom: 2.5rem;
+  }
+}
+
+@media (max-width: 355px) {
+  .max-\[355px\]\:bottom-8 {
+    bottom: 2rem;
+  }
+
+  .max-\[355px\]\:bottom-5 {
+    bottom: 1.25rem;
+  }
+}
+
 @media (min-width: 768px) {
+  .md\:my-3 {
+    margin-top: 0.75rem;
+    margin-bottom: 0.75rem;
+  }
+
   .md\:mt-20 {
     margin-top: 5rem;
   }
@@ -1027,16 +1089,8 @@ video {
     width: 33.333333%;
   }
 
-  .md\:w-full {
-    width: 100%;
-  }
-
   .md\:flex-row {
     flex-direction: row;
-  }
-
-  .md\:justify-evenly {
-    justify-content: space-evenly;
   }
 
   .md\:gap-20 {
@@ -1065,5 +1119,10 @@ video {
   .md\:py-4 {
     padding-top: 1rem;
     padding-bottom: 1rem;
+  }
+
+  .md\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 }
