--- a/Project-3/style.css
+++ b/Project-3/style.css
@@ -542,16 +542,16 @@ video {
   position: relative;
 }
 
+.bottom-5 {
+  bottom: 1.25rem;
+}
+
 .left-0 {
   left: 0px;
 }
 
 .top-0 {
   top: 0px;
-}
-
-.bottom-5 {
-  bottom: 1.25rem;
 }
 
 .z-10 {
@@ -563,14 +563,14 @@ video {
   margin-bottom: 3rem;
 }
 
-.my-3 {
-  margin-top: 0.75rem;
-  margin-bottom: 0.75rem;
-}
-
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+}
+
+.my-3 {
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
 }
 
 .ml-3 {
@@ -609,21 +609,17 @@ video {
   display: none;
 }
 
+.h-\[930px\] {
+  height: 930px;
+}
+
 .h-fit {
   height: -moz-fit-content;
   height: fit-content;
 }
 
-.h-1\/2 {
-  height: 50%;
-}
-
-.h-\[25\%\] {
-  height: 25%;
-}
-
-.h-\[930px\] {
-  height: 930px;
+.h-full {
+  height: 100%;
 }
 
 .w-1\/2 {
@@ -643,40 +639,8 @@ video {
   width: 100%;
 }
 
-.list-image-\[url\(\'\.\/asss\'\)\] {
-  list-style-image: url('./asss');
-}
-
-.list-image-\[url\(\'\.\/assets\/Icons\'\)\] {
-  list-style-image: url('./assets/Icons');
-}
-
-.list-image-\[url\(\'\.\/assets\/Icon\'\)\] {
-  list-style-image: url('./assets/Icon');
-}
-
-.list-image-\[url\(\'\.\/assets\/icon\'\)\] {
-  list-style-image: url('./assets/icon');
-}
-
 .list-image-\[url\(\'\.\/assets\/Icon\.png\'\)\] {
   list-style-image: url('./assets/Icon.png');
-}
-
-.grid-rows-2 {
-  grid-template-rows: repeat(2, minmax(0, 1fr));
-}
-
-.grid-rows-\[1fr_0\.5fr\] {
-  grid-template-rows: 1fr 0.5fr;
-}
-
-.grid-rows-\[1fr_0\.2fr\] {
-  grid-template-rows: 1fr 0.2fr;
-}
-
-.grid-rows-\[1fr_0\.1fr\] {
-  grid-template-rows: 1fr 0.1fr;
 }
 
 .grid-rows-\[1fr_1fr\] {
@@ -693,10 +657,6 @@ video {
 
 .items-center {
   align-items: center;
-}
-
-.justify-start {
-  justify-content: flex-start;
 }
 
 .justify-center {
@@ -723,20 +683,8 @@ video {
   gap: 1.25rem;
 }
 
-.self-start {
-  align-self: flex-start;
-}
-
-.self-end {
-  align-self: flex-end;
-}
-
 .self-center {
   align-self: center;
-}
-
-.justify-self-center {
-  justify-self: center;
 }
 
 .rounded-3xl {
@@ -860,6 +808,11 @@ video {
   font-family: 'Poppins','serif';
 }
 
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
@@ -905,26 +858,6 @@ video {
 
 .font-semibold {
   font-weight: 600;
-}
-
-.leading-none {
-  line-height: 1;
-}
-
-.leading-tight {
-  line-height: 1.25;
-}
-
-.leading-loose {
-  line-height: 2;
-}
-
-.leading-normal {
-  line-height: 1.5;
-}
-
-.leading-relaxed {
-  line-height: 1.625;
 }
 
 .text-\[\#42454A\] {
@@ -990,6 +923,10 @@ video {
     position: absolute;
   }
 
+  .max-md\:mt-96 {
+    margin-top: 24rem;
+  }
+
   .max-md\:hidden {
     display: none;
   }
@@ -1039,31 +976,15 @@ video {
   }
 }
 
-@media (max-width: 444px) {
-  .max-\[444px\]\:bottom-0 {
-    bottom: 0px;
-  }
-
-  .max-\[444px\]\:bottom-5 {
-    bottom: 1.25rem;
-  }
-
-  .max-\[444px\]\:bottom-8 {
-    bottom: 2rem;
-  }
-
-  .max-\[444px\]\:bottom-10 {
-    bottom: 2.5rem;
+@media (max-width: 460px) {
+  .max-\[460px\]\:mt-44 {
+    margin-top: 11rem;
   }
 }
 
 @media (max-width: 355px) {
   .max-\[355px\]\:bottom-8 {
     bottom: 2rem;
-  }
-
-  .max-\[355px\]\:bottom-5 {
-    bottom: 1.25rem;
   }
 }
 
