--- a/Project-3/style.css
+++ b/Project-3/style.css
@@ -542,6 +542,33 @@ video {
   position: relative;
 }
 
+.inset-2 {
+  inset: 0.5rem;
+}
+
+.inset-10 {
+  inset: 2.5rem;
+}
+
+.-inset-10 {
+  inset: -2.5rem;
+}
+
+.inset-x-3 {
+  left: 0.75rem;
+  right: 0.75rem;
+}
+
+.inset-x-5 {
+  left: 1.25rem;
+  right: 1.25rem;
+}
+
+.inset-x-20 {
+  left: 5rem;
+  right: 5rem;
+}
+
 .bottom-5 {
   bottom: 1.25rem;
 }
@@ -571,6 +598,21 @@ video {
 .my-3 {
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
+}
+
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+}
+
+.my-16 {
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+}
+
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
 }
 
 .ml-3 {
@@ -912,6 +954,11 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 
+.before\:content-\[url\(\'\.\/assets\/Icon\.png\'\)\]::before {
+  --tw-content: url('./assets/Icon.png');
+  content: var(--tw-content);
+}
+
 .hover\:scale-110:hover {
   --tw-scale-x: 1.1;
   --tw-scale-y: 1.1;
@@ -994,6 +1041,16 @@ video {
     margin-bottom: 0.75rem;
   }
 
+  .md\:my-20 {
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+  }
+
+  .md\:my-28 {
+    margin-top: 7rem;
+    margin-bottom: 7rem;
+  }
+
   .md\:mt-20 {
     margin-top: 5rem;
   }
@@ -1010,8 +1067,24 @@ video {
     width: 33.333333%;
   }
 
+  .md\:w-1\/2 {
+    width: 50%;
+  }
+
+  .md\:w-3\/5 {
+    width: 60%;
+  }
+
+  .md\:w-2\/5 {
+    width: 40%;
+  }
+
   .md\:flex-row {
     flex-direction: row;
+  }
+
+  .md\:flex-col {
+    flex-direction: column;
   }
 
   .md\:gap-20 {
