--- a/Project-3/style.css
+++ b/Project-3/style.css
@@ -542,31 +542,36 @@ video {
   position: relative;
 }
 
-.inset-2 {
-  inset: 0.5rem;
-}
-
 .inset-10 {
   inset: 2.5rem;
 }
 
-.-inset-10 {
-  inset: -2.5rem;
+.inset-5 {
+  inset: 1.25rem;
 }
 
-.inset-x-3 {
-  left: 0.75rem;
-  right: 0.75rem;
+.inset-1 {
+  inset: 0.25rem;
 }
 
-.inset-x-5 {
-  left: 1.25rem;
-  right: 1.25rem;
+.inset-x-1 {
+  left: 0.25rem;
+  right: 0.25rem;
+}
+
+.inset-x-10 {
+  left: 2.5rem;
+  right: 2.5rem;
 }
 
 .inset-x-20 {
   left: 5rem;
   right: 5rem;
+}
+
+.-inset-x-20 {
+  left: -5rem;
+  right: -5rem;
 }
 
 .bottom-5 {
@@ -583,6 +588,15 @@ video {
 
 .z-10 {
   z-index: 10;
+}
+
+.order-2 {
+  order: 2;
+}
+
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
 }
 
 .my-12 {
@@ -605,16 +619,6 @@ video {
   margin-bottom: 1.25rem;
 }
 
-.my-16 {
-  margin-top: 4rem;
-  margin-bottom: 4rem;
-}
-
-.my-10 {
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
-}
-
 .ml-3 {
   margin-left: 0.75rem;
 }
@@ -633,6 +637,10 @@ video {
 
 .mt-20 {
   margin-top: 5rem;
+}
+
+.ml-5 {
+  margin-left: 1.25rem;
 }
 
 .block {
@@ -679,6 +687,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-screen {
+  width: 100vw;
 }
 
 .list-image-\[url\(\'\.\/assets\/Icon\.png\'\)\] {
@@ -838,6 +850,10 @@ video {
   padding-top: 1.75rem;
 }
 
+.pr-4 {
+  padding-right: 1rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -965,9 +981,23 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+@media (max-width: 1166px) {
+  .max-\[1166px\]\:ml-5 {
+    margin-left: 1.25rem;
+  }
+
+  .max-\[1166px\]\:gap-10 {
+    gap: 2.5rem;
+  }
+}
+
 @media not all and (min-width: 768px) {
   .max-md\:absolute {
     position: absolute;
+  }
+
+  .max-md\:order-1 {
+    order: 1;
   }
 
   .max-md\:mt-96 {
@@ -986,6 +1016,11 @@ video {
     width: 45vw;
   }
 
+  .max-md\:w-fit {
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+
   .max-md\:flex-col {
     flex-direction: column;
   }
@@ -996,6 +1031,10 @@ video {
 
   .max-md\:gap-5 {
     gap: 1.25rem;
+  }
+
+  .max-md\:gap-10 {
+    gap: 2.5rem;
   }
 
   .max-md\:bg-slate-300 {
@@ -1036,19 +1075,22 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:my-3 {
-    margin-top: 0.75rem;
-    margin-bottom: 0.75rem;
+  .md\:order-1 {
+    order: 1;
   }
 
-  .md\:my-20 {
-    margin-top: 5rem;
-    margin-bottom: 5rem;
+  .md\:order-2 {
+    order: 2;
   }
 
   .md\:my-28 {
     margin-top: 7rem;
     margin-bottom: 7rem;
+  }
+
+  .md\:my-3 {
+    margin-top: 0.75rem;
+    margin-bottom: 0.75rem;
   }
 
   .md\:mt-20 {
@@ -1067,28 +1109,36 @@ video {
     width: 33.333333%;
   }
 
-  .md\:w-1\/2 {
-    width: 50%;
+  .md\:w-2\/5 {
+    width: 40%;
   }
 
   .md\:w-3\/5 {
     width: 60%;
   }
 
-  .md\:w-2\/5 {
-    width: 40%;
+  .md\:w-2\/3 {
+    width: 66.666667%;
+  }
+
+  .md\:w-1\/2 {
+    width: 50%;
   }
 
   .md\:flex-row {
     flex-direction: row;
   }
 
-  .md\:flex-col {
-    flex-direction: column;
-  }
-
   .md\:gap-20 {
     gap: 5rem;
+  }
+
+  .md\:gap-10 {
+    gap: 2.5rem;
+  }
+
+  .md\:gap-24 {
+    gap: 6rem;
   }
 
   .md\:border-b {
@@ -1118,5 +1168,17 @@ video {
   .md\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:gap-24 {
+    gap: 6rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:w-full {
+    width: 100%;
   }
 }
