--- a/Project-3/style.css
+++ b/Project-3/style.css
@@ -542,38 +542,6 @@ video {
   position: relative;
 }
 
-.inset-10 {
-  inset: 2.5rem;
-}
-
-.inset-5 {
-  inset: 1.25rem;
-}
-
-.inset-1 {
-  inset: 0.25rem;
-}
-
-.inset-x-1 {
-  left: 0.25rem;
-  right: 0.25rem;
-}
-
-.inset-x-10 {
-  left: 2.5rem;
-  right: 2.5rem;
-}
-
-.inset-x-20 {
-  left: 5rem;
-  right: 5rem;
-}
-
-.-inset-x-20 {
-  left: -5rem;
-  right: -5rem;
-}
-
 .bottom-5 {
   bottom: 1.25rem;
 }
@@ -619,6 +587,11 @@ video {
   margin-bottom: 1.25rem;
 }
 
+.my-14 {
+  margin-top: 3.5rem;
+  margin-bottom: 3.5rem;
+}
+
 .ml-3 {
   margin-left: 0.75rem;
 }
@@ -637,10 +610,6 @@ video {
 
 .mt-20 {
   margin-top: 5rem;
-}
-
-.ml-5 {
-  margin-left: 1.25rem;
 }
 
 .block {
@@ -687,10 +656,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-screen {
-  width: 100vw;
 }
 
 .list-image-\[url\(\'\.\/assets\/Icon\.png\'\)\] {
@@ -757,6 +722,14 @@ video {
   border-width: 1px;
 }
 
+.border-4 {
+  border-width: 4px;
+}
+
+.border-2 {
+  border-width: 2px;
+}
+
 .border-r {
   border-right-width: 1px;
 }
@@ -768,6 +741,11 @@ video {
 .border-\[\#42454A\] {
   --tw-border-opacity: 1;
   border-color: rgb(66 69 74 / var(--tw-border-opacity));
+}
+
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
 .bg-\[\#42454A\] {
@@ -834,6 +812,16 @@ video {
   padding-bottom: 0.75rem;
 }
 
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 .pb-4 {
   padding-bottom: 1rem;
 }
@@ -842,16 +830,16 @@ video {
   padding-left: 2.25rem;
 }
 
+.pr-4 {
+  padding-right: 1rem;
+}
+
 .pt-10 {
   padding-top: 2.5rem;
 }
 
 .pt-7 {
   padding-top: 1.75rem;
-}
-
-.pr-4 {
-  padding-right: 1rem;
 }
 
 .text-center {
@@ -981,16 +969,6 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-@media (max-width: 1166px) {
-  .max-\[1166px\]\:ml-5 {
-    margin-left: 1.25rem;
-  }
-
-  .max-\[1166px\]\:gap-10 {
-    gap: 2.5rem;
-  }
-}
-
 @media not all and (min-width: 768px) {
   .max-md\:absolute {
     position: absolute;
@@ -1016,11 +994,6 @@ video {
     width: 45vw;
   }
 
-  .max-md\:w-fit {
-    width: -moz-fit-content;
-    width: fit-content;
-  }
-
   .max-md\:flex-col {
     flex-direction: column;
   }
@@ -1031,10 +1004,6 @@ video {
 
   .max-md\:gap-5 {
     gap: 1.25rem;
-  }
-
-  .max-md\:gap-10 {
-    gap: 2.5rem;
   }
 
   .max-md\:bg-slate-300 {
@@ -1068,9 +1037,40 @@ video {
   }
 }
 
+@media (max-width: 448px) {
+  .max-\[448px\]\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+}
+
 @media (max-width: 355px) {
   .max-\[355px\]\:bottom-8 {
     bottom: 2rem;
+  }
+}
+
+@media (max-width: 44px) {
+  .max-\[44px\]\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+}
+
+@media (min-width: 640px) {
+  .sm\:px-10 {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+
+  .sm\:py-8 {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+  }
+
+  .sm\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 }
 
@@ -1105,6 +1105,10 @@ video {
     display: none;
   }
 
+  .md\:w-1\/2 {
+    width: 50%;
+  }
+
   .md\:w-1\/3 {
     width: 33.333333%;
   }
@@ -1117,24 +1121,12 @@ video {
     width: 60%;
   }
 
-  .md\:w-2\/3 {
-    width: 66.666667%;
-  }
-
-  .md\:w-1\/2 {
-    width: 50%;
-  }
-
   .md\:flex-row {
     flex-direction: row;
   }
 
   .md\:gap-20 {
     gap: 5rem;
-  }
-
-  .md\:gap-10 {
-    gap: 2.5rem;
   }
 
   .md\:gap-24 {
@@ -1168,12 +1160,6 @@ video {
   .md\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
-  }
-}
-
-@media (min-width: 1024px) {
-  .lg\:gap-24 {
-    gap: 6rem;
   }
 }
 
