--- a/Project-3/style.css
+++ b/Project-3/style.css
@@ -550,8 +550,20 @@ video {
   left: 0px;
 }
 
+.left-7 {
+  left: 1.75rem;
+}
+
 .top-0 {
   top: 0px;
+}
+
+.top-16 {
+  top: 4rem;
+}
+
+.top-8 {
+  top: 2rem;
 }
 
 .z-10 {
@@ -572,6 +584,11 @@ video {
   margin-bottom: 3rem;
 }
 
+.my-14 {
+  margin-top: 3.5rem;
+  margin-bottom: 3.5rem;
+}
+
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
@@ -587,9 +604,13 @@ video {
   margin-bottom: 1.25rem;
 }
 
-.my-14 {
-  margin-top: 3.5rem;
-  margin-bottom: 3.5rem;
+.my-7 {
+  margin-top: 1.75rem;
+  margin-bottom: 1.75rem;
+}
+
+.mb-16 {
+  margin-bottom: 4rem;
 }
 
 .ml-3 {
@@ -702,8 +723,21 @@ video {
   gap: 1.25rem;
 }
 
+.gap-x-10 {
+  -moz-column-gap: 2.5rem;
+       column-gap: 2.5rem;
+}
+
 .self-center {
   align-self: center;
+}
+
+.justify-self-center {
+  justify-self: center;
+}
+
+.overflow-x-clip {
+  overflow-x: clip;
 }
 
 .rounded-3xl {
@@ -722,10 +756,6 @@ video {
   border-width: 1px;
 }
 
-.border-4 {
-  border-width: 4px;
-}
-
 .border-2 {
   border-width: 2px;
 }
@@ -741,11 +771,6 @@ video {
 .border-\[\#42454A\] {
   --tw-border-opacity: 1;
   border-color: rgb(66 69 74 / var(--tw-border-opacity));
-}
-
-.border-black {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
 .bg-\[\#42454A\] {
@@ -812,11 +837,6 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -828,10 +848,6 @@ video {
 
 .pl-9 {
   padding-left: 2.25rem;
-}
-
-.pr-4 {
-  padding-right: 1rem;
 }
 
 .pt-10 {
@@ -906,6 +922,14 @@ video {
   font-weight: 600;
 }
 
+.leading-3 {
+  line-height: .75rem;
+}
+
+.leading-4 {
+  line-height: 1rem;
+}
+
 .text-\[\#42454A\] {
   --tw-text-opacity: 1;
   color: rgb(66 69 74 / var(--tw-text-opacity));
@@ -974,6 +998,10 @@ video {
     position: absolute;
   }
 
+  .max-md\:top-10 {
+    top: 2.5rem;
+  }
+
   .max-md\:order-1 {
     order: 1;
   }
@@ -990,12 +1018,20 @@ video {
     min-height: 100vh;
   }
 
+  .max-md\:w-3\/4 {
+    width: 75%;
+  }
+
   .max-md\:w-\[45vw\] {
     width: 45vw;
   }
 
   .max-md\:flex-col {
     flex-direction: column;
+  }
+
+  .max-md\:items-center {
+    align-items: center;
   }
 
   .max-md\:justify-evenly {
@@ -1037,35 +1073,46 @@ video {
   }
 }
 
-@media (max-width: 448px) {
-  .max-\[448px\]\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
-}
-
 @media (max-width: 355px) {
   .max-\[355px\]\:bottom-8 {
     bottom: 2rem;
   }
 }
 
-@media (max-width: 44px) {
-  .max-\[44px\]\:text-xl {
+@media (min-width: 364px) {
+  .min-\[364px\]\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
   }
 }
 
 @media (min-width: 640px) {
+  .sm\:top-16 {
+    top: 4rem;
+  }
+
   .sm\:px-10 {
     padding-left: 2.5rem;
     padding-right: 2.5rem;
   }
 
+  .sm\:py-6 {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+
   .sm\:py-8 {
     padding-top: 2rem;
     padding-bottom: 2rem;
+  }
+
+  .sm\:pr-4 {
+    padding-right: 1rem;
+  }
+
+  .sm\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 
   .sm\:text-3xl {
@@ -1093,8 +1140,16 @@ video {
     margin-bottom: 0.75rem;
   }
 
+  .md\:-mt-20 {
+    margin-top: -5rem;
+  }
+
   .md\:mt-20 {
     margin-top: 5rem;
+  }
+
+  .md\:mt-40 {
+    margin-top: 10rem;
   }
 
   .md\:block {
@@ -1119,6 +1174,10 @@ video {
 
   .md\:w-3\/5 {
     width: 60%;
+  }
+
+  .md\:w-4\/5 {
+    width: 80%;
   }
 
   .md\:flex-row {
@@ -1155,6 +1214,11 @@ video {
   .md\:py-4 {
     padding-top: 1rem;
     padding-bottom: 1rem;
+  }
+
+  .md\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 
   .md\:text-lg {
