All Person Images Placed On Map For MD Screens and Max Screens0;

--- a/Project-4/style.css
+++ b/Project-4/style.css
@@ -526,6 +526,10 @@ video {
   position: fixed;
 }
 
+.absolute {
+  position: absolute;
+}
+
 .relative {
   position: relative;
 }
@@ -544,6 +548,306 @@ video {
 
 .top-0 {
   top: 0px;
+}
+
+.left-10 {
+  left: 2.5rem;
+}
+
+.left-40 {
+  left: 10rem;
+}
+
+.left-20 {
+  left: 5rem;
+}
+
+.top-20 {
+  top: 5rem;
+}
+
+.top-16 {
+  top: 4rem;
+}
+
+.top-12 {
+  top: 3rem;
+}
+
+.top-10 {
+  top: 2.5rem;
+}
+
+.left-36 {
+  left: 9rem;
+}
+
+.left-\[150px\] {
+  left: 150px;
+}
+
+.left-\[148px\] {
+  left: 148px;
+}
+
+.left-\[155px\] {
+  left: 155px;
+}
+
+.left-\[154px\] {
+  left: 154px;
+}
+
+.left-\[153px\] {
+  left: 153px;
+}
+
+.top-9 {
+  top: 2.25rem;
+}
+
+.left-28 {
+  left: 7rem;
+}
+
+.left-32 {
+  left: 8rem;
+}
+
+.top-8 {
+  top: 2rem;
+}
+
+.top-52 {
+  top: 13rem;
+}
+
+.top-48 {
+  top: 12rem;
+}
+
+.top-40 {
+  top: 10rem;
+}
+
+.top-24 {
+  top: 6rem;
+}
+
+.left-96 {
+  left: 24rem;
+}
+
+.left-80 {
+  left: 20rem;
+}
+
+.left-\[350PX\] {
+  left: 350PX;
+}
+
+.left-\[345px\] {
+  left: 345px;
+}
+
+.left-\[350px\] {
+  left: 350px;
+}
+
+.top-28 {
+  top: 7rem;
+}
+
+.top-\[100px\] {
+  top: 100px;
+}
+
+.top-56 {
+  top: 14rem;
+}
+
+.left-\[400px\] {
+  left: 400px;
+}
+
+.left-\[420px\] {
+  left: 420px;
+}
+
+.left-\[416px\] {
+  left: 416px;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.-right-0 {
+  right: -0px;
+}
+
+.-left-0 {
+  left: -0px;
+}
+
+.-left-9 {
+  left: -2.25rem;
+}
+
+.right-9 {
+  right: 2.25rem;
+}
+
+.-right-9 {
+  right: -2.25rem;
+}
+
+.top-32 {
+  top: 8rem;
+}
+
+.right-96 {
+  right: 24rem;
+}
+
+.right-\[450px\] {
+  right: 450px;
+}
+
+.right-\[500px\] {
+  right: 500px;
+}
+
+.right-\[510px\] {
+  right: 510px;
+}
+
+.right-\[505px\] {
+  right: 505px;
+}
+
+.right-\[507px\] {
+  right: 507px;
+}
+
+.top-\[70px\] {
+  top: 70px;
+}
+
+.top-\[75px\] {
+  top: 75px;
+}
+
+.right-32 {
+  right: 8rem;
+}
+
+.top-5 {
+  top: 1.25rem;
+}
+
+.top-4 {
+  top: 1rem;
+}
+
+.right-28 {
+  right: 7rem;
+}
+
+.right-24 {
+  right: 6rem;
+}
+
+.right-20 {
+  right: 5rem;
+}
+
+.right-\[85px\] {
+  right: 85px;
+}
+
+.right-\[90px\] {
+  right: 90px;
+}
+
+.right-80 {
+  right: 20rem;
+}
+
+.top-60 {
+  top: 15rem;
+}
+
+.right-\[400px\] {
+  right: 400px;
+}
+
+.top-44 {
+  top: 11rem;
+}
+
+.top-\[170px\] {
+  top: 170px;
+}
+
+.top-\[160px\] {
+  top: 160px;
+}
+
+.top-\[165px\] {
+  top: 165px;
+}
+
+.right-\[395px\] {
+  right: 395px;
+}
+
+.top-\[168px\] {
+  top: 168px;
+}
+
+.bottom-10 {
+  bottom: 2.5rem;
+}
+
+.bottom-20 {
+  bottom: 5rem;
+}
+
+.bottom-40 {
+  bottom: 10rem;
+}
+
+.bottom-36 {
+  bottom: 9rem;
+}
+
+.right-\[150pxpx\] {
+  right: 150pxpx;
+}
+
+.right-\[150px\] {
+  right: 150px;
+}
+
+.right-\[440px\] {
+  right: 440px;
+}
+
+.bottom-32 {
+  bottom: 8rem;
+}
+
+.right-\[435px\] {
+  right: 435px;
+}
+
+.right-\[432px\] {
+  right: 432px;
+}
+
+.right-\[438px\] {
+  right: 438px;
 }
 
 .z-10 {
@@ -596,6 +900,10 @@ video {
   height: 100vh;
 }
 
+.h-full {
+  height: 100%;
+}
+
 .w-12 {
   width: 3rem;
 }
@@ -611,6 +919,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-1\/5 {
+  width: 20%;
 }
 
 .rotate-90 {
@@ -802,6 +1114,18 @@ video {
     width: 45vw;
   }
 
+  .max-md\:w-1\/2 {
+    width: 50%;
+  }
+
+  .max-md\:w-\[10\%\] {
+    width: 10%;
+  }
+
+  .max-md\:w-\[20\%\] {
+    width: 20%;
+  }
+
   .max-md\:-translate-x-full {
     --tw-translate-x: -100%;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -831,6 +1155,10 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:relative {
+    position: relative;
+  }
+
   .md\:order-1 {
     order: 1;
   }
